added unknown code handler

--- a/public/gamescreen.css
+++ b/public/gamescreen.css
@@ -27,6 +27,8 @@
     background: #F1FBFC;
     height: 380px;
     width: inherit;
+    display: flex;
+    justify-content: start;
 }
 
 #citiesInput{
