--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,8 +12,9 @@
   <script>
     var socket = io();
     </script>
-    <section class="initialScreenBg" id = "main" id="initialScreen" >
+    <section class="initialScreenBg"  id="initialScreen" >
         <div class="blur">
+          <div style="display: flex; flex-direction: column; height: 650px;">
           <h1>ИГРА В ГОРОДА</h1>
           <h3>Онлайн игра в названия городов</h3>
               <div class="enterPoint">
@@ -39,6 +40,7 @@
                   Играть одному 
                     </a>
                   </button>
+                  </div>
               </div>
             </div>
     </section>
