--- a/views/single-player.ejs
+++ b/views/single-player.ejs
@@ -14,18 +14,18 @@
     </script>
     <div id="gameScreen" class="h-100">
         <div class="container">
-        <div id = "info">&nbsp; &nbsp; </div>
+        <div id = "info"> Вы играете против компьютера </div>
         <div id = "cities">
           <ul id = "msg">
            
             <li> </li>
-            
+
           </ul>
         </div>
         <form id = "form"  >
           <input type="text" id = "input" name="city">
             <div id = "citiesInput">
-                <button id = "giveUp">Сдаюсь</button>
+                <button id = "giveUp"><a href="/"> На главную </a></button>
                 <button id="send" type="submit">Отправить</button>
               </div>
             </form>
