--- a/public/styles.css
+++ b/public/styles.css
@@ -6,12 +6,24 @@ body{
     font-size: 24px;
 }
 
+a {
+    text-decoration: none;
+}
+
 input[type="text"] {
     font-size:24px;
+    text-align: center;
 }
 
 li, ul {
     list-style: none;
+    margin-right: 15px;
+}
+
+ul{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 
 .initialScreenBg {
@@ -37,6 +49,7 @@ li, ul {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    
 }
 
 h1 {
