--- a/public/gamescreen.css
+++ b/public/gamescreen.css
@@ -25,7 +25,7 @@
 
 #cities {
     background: #F1FBFC;
-    height: 300px;
+    max-height: 300px;
     width: inherit;
     display: flex;
     justify-content: start;
@@ -101,3 +101,68 @@ form {
 textarea:focus, input:focus{
     outline: none;
 }
+
+ @media screen and (max-width: 600px) {
+    
+    .blur :first-child{
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: stretch;
+        padding: 20px;
+    }
+
+    h1 {
+        font-size: 48px;
+        line-height: 48px;
+    }
+
+    h3 {
+        font-size: 24px;
+        margin: 0.5rem;
+        margin-bottom: 20px;
+    }
+    h4 {
+        font-size: 18px;
+        line-height: 18px;
+    }
+
+    .enterPoint {
+        max-width: 640px;
+        align-self: center;
+        width: 300px;
+    }
+    .enterPoint input {
+        width: inherit;
+        margin: 10px;
+        height: 60px;
+    }
+    .enterPoint button{
+        font-size: 18px;
+    }
+
+    .container {
+        width: 80%;
+        max-width: 800px;
+        height: 85%;
+        align-items: center;
+    }
+
+    #cities {      
+        height: 40%;
+    }
+
+    #gameScreen input {
+        width: inherit;
+        margin-bottom: 10px;
+        flex-grow: 2;
+    }
+    #citiesInput {
+        flex-direction: column;
+        align-items: center;
+    }
+    button {
+        height: 50px;
+        margin-bottom: 10px;
+    }
+     }
