--- a/public/styles.css
+++ b/public/styles.css
@@ -86,7 +86,7 @@ h4 {
 
 
 .enterPoint{
-    width: 640px;
+    max-width: 640px;
     height: 450px;
     margin: auto;
     display: flex;
@@ -105,6 +105,7 @@ button {
     font-size: 24px;
     border: none;
     text-align: center;
+    border-radius: 10px;
     width: 300px;
     height: 60px;
     display: flex;
